# manim-rs

./: .gitignore  BRANCH_QUALITY_REVIEW.md  BRANCH_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PHASE3_REVIEW.md  PHASE3_SUMMARY.md  PROFESSIONAL_REPO_REVIEW.md  README.md  REVIEW_SUMMARY.md  ROADMAP.md
.cursor/rules/: api-design.mdc  dependencies.mdc  documentation.mdc  examples.mdc  git-workflow.mdc  project-overview.mdc  rust-style.mdc  testing.mdc
.github/workflows/: ci.yml
benches/: mobject_ops.rs  path_ops.rs  vector_ops.rs
docs/: ARCHITECTURE.md
examples/: color_demo.rs  path_demo.rs  raster_basic.rs  svg_basic.rs  vector_demo.rs
examples/basic/: shapes.rs
src/: lib.rs
src/animation/: mod.rs
src/backends/: mod.rs
src/backends/raster/: mod.rs  path_converter.rs  style_converter.rs
src/backends/svg/: elements.rs  mod.rs  path_converter.rs  style_converter.rs
src/core/: angle.rs  bezier.rs  bounding_box.rs  color.rs  error.rs  mod.rs  transform.rs  vector.rs
src/mobject/: bezier_path.rs  group.rs  mod.rs  vmobject.rs
src/mobject/geometry/: arc.rs  arrow.rs  circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rectangle.rs
src/renderer/: mod.rs  path.rs  style.rs
src/scene/: mod.rs
src/utils/: mod.rs
tests/: mobject_integration_tests.rs  raster_backend_tests.rs  renderer_tests.rs  svg_backend_tests.rs
